Fix creation of exercises, make code more readable

--- a/public/css/screen.css
+++ b/public/css/screen.css
@@ -32,6 +32,7 @@ code {
     display: inline-block;
     width: 24px;
     height: 24px;
+    margin-right: 0.3em;
 }
 
 s {
